macros/tests/entry/fail/unexpected_types.stderr
error: Expected string literal
 --> tests/sig5-fail.rs:4:17
  |
4 | #[entry(crate = b"bytes", fake = true)]
  |                 ^^^^^^^^

error: Unexpected argument `fake`
 --> tests/sig5-fail.rs:4:27
  |
4 | #[entry(crate = b"bytes", fake = true)]
  |                           ^^^^^^^^^^^
